[SELC-5862] fix: serialize ADMIN_EA updating openapi of user-ms (#441)